# mycel-os

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  DESIGN_SYNC.md  Makefile  README.md  SECURITY.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  rust-toolchain.toml
.devcontainer/: CODESPACE_README.md  INSTRUCTIONS.md  devcontainer.json  post-create.sh  post-start.sh  setup.sh
.github/workflows/: ci.yml  release.yml
config/: config.toml
docker/: Dockerfile.void  Dockerfile.void-builder  docker-compose.yml  entrypoint-mycel.sh
docs/: ARCHITECTURE.md  COLLECTIVE_INTELLIGENCE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_v2.md  EVOLVING_GUI.md  GETTING_STARTED.md  NETWORK_TOPOLOGY.md  QUALITY_GATES.md  QUICK_REFERENCE.md  THREAT_MODEL.md
mcp-servers/near-identity/: index.js  package-lock.json  package.json
mcp-servers/void-tools/: void_tools.py
mcp-servers/web-tools/: web_tools.py
mycel-runtime/: Cargo.toml
mycel-runtime/mcp-servers/void-tools/: pyproject.toml  void_tools.py
mycel-runtime/src/: main.rs
mycel-runtime/src/ai/: mod.rs
mycel-runtime/src/codegen/: mod.rs
mycel-runtime/src/collective/: bittensor.rs  discovery.rs  mod.rs  near.rs  patterns.rs  privacy.rs
mycel-runtime/src/config/: mod.rs
mycel-runtime/src/context/: mod.rs
mycel-runtime/src/events/: mod.rs
mycel-runtime/src/executor/: mod.rs
mycel-runtime/src/intent/: mod.rs
mycel-runtime/src/ipc/: mod.rs
mycel-runtime/src/mcp/: client.rs  evolution.rs  mod.rs  protocol.rs  tool_parser.rs
mycel-runtime/src/models/: mod.rs
mycel-runtime/src/policy/: mod.rs
mycel-runtime/src/sync/: mod.rs
mycel-runtime/src/ui/: mod.rs
scripts/: build-image.sh  build-iso.sh  build-mycel-iso.sh  dev-run.sh  local-dev.sh  run-vm.sh  setup-dev.sh  test-iso.sh  void-build-iso.sh
tools/: mycel-cli.py
