[project]
name = "void-tools"
version = "0.1.0"
description = "MCP server for Void Linux system tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
void-tools = "void_tools:main"
